<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/s_gradient"
    tools:context=".Registrar">

    <ScrollView
        android:id="@+id/srv1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:padding="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/Nameerrorr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <EditText
                            android:id="@+id/Namer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textNoSuggestions"
                            android:maxLines="1"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/Emailerrorr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <EditText
                            android:id="@+id/Emailr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/Phoneerrorr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <EditText
                            android:id="@+id/Phoner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:inputType="number"
                            android:maxLength="12"
                            android:maxLines="1"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/Passerrorr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/Passwordr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Puesto"
                        android:layout_margin="5dp"/>

                    <Spinner
                        android:id="@+id/sppuesr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/pues"
                        android:gravity="center"
                        android:layout_margin="5dp"
                        android:theme="@style/Theme.Design.Light" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Zona" />

                    <Spinner
                        android:id="@+id/spzonr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/zon"
                        android:gravity="center"
                        android:layout_margin="5dp"
                        android:theme="@style/Theme.Design.Light" />

                    <Button
                        android:id="@+id/Registrarr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/s_button_gradient"
                        android:text="@string/register"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:layout_margin="5dp"/>

                    <TextView
                        android:id="@+id/Loginr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/not_register"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>